plugins {
	id 'java'
	id 'org.springframework.boot' version '3.5.3'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.leets'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

repositories {
	mavenCentral()
}

dependencies {
	//카카오 회원가입 기능에서 추가 (신은지 0711)--
	//implementation 'org.springframework.boot:spring-boot-starter-webflux'
	// WebClient만 사용하기 위한 최소 의존성
	implementation 'org.springframework:spring-webflux'

	//------------------------------------------

	//
	implementation 'org.springframework.boot:spring-boot-starter'
	implementation 'org.springframework.boot:spring-boot-starter-actuator'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'


	// 기본
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'

	// DB 관련
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	runtimeOnly 'com.h2database:h2'
	runtimeOnly 'com.mysql:mysql-connector-j'

	// 시큐리티
	implementation 'org.springframework.boot:spring-boot-starter-security'

	// JWT
	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'


	// Swagger 관련
	//스웨거 버전 문제로 버전 올림 (신은지 0711)
	//implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.3.0'
	// 수정
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.5.0'

	//FCM 관련
	implementation 'com.google.firebase:firebase-admin:9.5.0'



}

tasks.named('test') {
	useJUnitPlatform()
}
